generated/checkers/gen/AllGen-Integer-Overflow-7a4b21250bf79eef26543d35bd390448646c536b/build_logs/syntax-repair-00/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::reportIssue(const clang::Stmt*, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:143:67: error: cannot convert ‘const clang::SourceManager*’ to ‘llvm::ArrayRef<clang::SourceRange>’
  143 |     R->addNote("Value comes from roundup_pow_of_two() here", Loc, &C.getSourceManager());
      |                                                                   ^~~~~~~~~~~~~~~~~~~~~
      |                                                                   |
      |                                                                   const clang::SourceManager*
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:202:38: note:   initializing argument 3 of ‘void clang::ento::BugReport::addNote(llvm::StringRef, const clang::ento::PathDiagnosticLocation&, llvm::ArrayRef<clang::SourceRange>)’
  202 |                ArrayRef<SourceRange> Ranges = {}) {
      |                ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:146:13: error: no matching function for call to ‘clang::ento::PathSensitiveBugReport::addNote(const char [105])’
  146 |   R->addNote("roundup_pow_of_two() may overflow (UB) on 32-bit; check the input before rounding (e.g., x > 1UL << 31).");
      |   ~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:201:8: note: candidate: ‘void clang::ento::BugReport::addNote(llvm::StringRef, const clang::ento::PathDiagnosticLocation&, llvm::ArrayRef<clang::SourceRange>)’
  201 |   void addNote(StringRef Msg, const PathDiagnosticLocation &Pos,
      |        ^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:201:8: note:   candidate expects 3 arguments, 1 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBranchCondition(const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:214:53: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type’ {aka ‘const clang::Stmt* const*’} to ‘const clang::Stmt*’ in initialization
  214 |   if (const Stmt *Origin = State->get<RoundupResMap>(MR)) {
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
      |                                                     |
      |                                                     clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type {aka const clang::Stmt* const*}
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
